[gd_scene load_steps=4 format=3 uid="uid://dhw7kxqy4cjrf"]

[ext_resource type="Script" path="res://modules/world_player/ui/player_hud.gd" id="1_hud"]
[ext_resource type="PackedScene" path="res://modules/world_player/ui/inventory_panel.tscn" id="2_inv"]
[ext_resource type="PackedScene" path="res://modules/world_player/ui/inventory_slot.tscn" id="3_slot"]

[node name="PlayerHUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="ModeIndicator" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
text = "PLAY"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BuildInfoLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = 60.0
text = ""
horizontal_alignment = 2
vertical_alignment = 1

[node name="TargetMaterial" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = 80.0
text = ""
horizontal_alignment = 2
vertical_alignment = 1

[node name="Crosshair" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 2

[node name="CrosshairDot" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
color = Color(1, 1, 1, 0.8)

[node name="DurabilityBar" type="ProgressBar" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 20.0
offset_right = 40.0
offset_bottom = 30.0
max_value = 100.0
value = 0.0
show_percentage = false

[node name="InteractionPrompt" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = -120.0
text = "[E] Interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusBars" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = -20.0

[node name="HealthBar" type="ProgressBar" parent="StatusBars"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="StaminaBar" type="ProgressBar" parent="StatusBars"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="Compass" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = 10.0
offset_right = 25.0
offset_bottom = 40.0
text = "N"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HotbarPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -425.0
offset_top = -85.0
offset_right = 425.0
offset_bottom = -10.0

[node name="HotbarContainer" type="HBoxContainer" parent="HotbarPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
alignment = 1

[node name="SelectedItemLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 440.0
offset_top = -70.0
offset_right = 640.0
offset_bottom = -30.0
text = "Fists"
horizontal_alignment = 0
vertical_alignment = 1

[node name="GameMenu" type="Control" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuBackground" type="ColorRect" parent="GameMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="ExitButton" type="Button" parent="GameMenu"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 60.0
text = "Exit Game"

[node name="InventoryPanel" parent="." instance=ExtResource("2_inv")]
